# ChangeLog for media-fonts/dejavu
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/dejavu/ChangeLog,v 1.118 2008/06/12 18:06:14 nixnut Exp $

  12 Jun 2008; nixnut <nixnut@gentoo.org> dejavu-2.25-r1.ebuild:
  Added ~ppc wrt bug 224541

  06 Jun 2008; Peter Volkov <pva@gentoo.org> dejavu-2.25-r1.ebuild:
  keyword ~amd64, bug #224541

  05 Jun 2008; Raúl Porcel <armin76@gentoo.org> dejavu-2.25-r1.ebuild:
  Re-add ~alpha/~ia64/~sparc wrt #224541

  04 Jun 2008; Alexis Ballier <aballier@gentoo.org> dejavu-2.25-r1.ebuild:
  keyword ~x86-fbsd

  04 Jun 2008; Peter Alfredsen <loki_val@gentoo.org> dejavu-2.25-r1.ebuild:
  Update deps

  04 Jun 2008; Markus Rothe <corsair@gentoo.org> dejavu-2.25-r1.ebuild:
  Added ~ppc64; bug #224541

*dejavu-2.25-r1 (01 Jun 2008)

  01 Jun 2008; Peter Alfredsen <loki_val@gentoo.org> +dejavu-2.25-r1.ebuild:
  Commit masked version for keywording and testing

*dejavu-2.25 (19 May 2008)

  19 May 2008; Peter Volkov <pva@gentoo.org> +dejavu-2.25.ebuild:
  Version bump.

*dejavu-2.23 (22 Jan 2008)

  22 Jan 2008; <pva@gentoo.org> -dejavu-2.18-r1.ebuild, -dejavu-2.20.ebuild,
  +dejavu-2.23.ebuild:
  Version bump. Removed old.

  08 Jan 2008; <pva@gentoo.org> dejavu-2.18-r1.ebuild, dejavu-2.20.ebuild,
  dejavu-2.21.ebuild, dejavu-2.22.20071220.2156.ebuild:
  FONT_CONF now array, bug 201834.

  21 Dec 2007; <pva@gentoo.org> -dejavu-2.22.ebuild:
  Cleaned broken version.

*dejavu-2.22.20071220.2156 (21 Dec 2007)

  21 Dec 2007; <pva@gentoo.org> +dejavu-2.22.20071220.2156.ebuild:
  Version bump to snapshot. Fixes metadata problem in the condensed fonts, bug
  #202255. Thank Matt Whitlock, Peter Henriksson and Guillaume Castagnino for
  report.

  15 Dec 2007; Samuli Suominen <drac@gentoo.org> dejavu-2.21.ebuild:
  amd64 stable wrt #202120

  14 Dec 2007; nixnut <nixnut@gentoo.org> dejavu-2.21.ebuild:
  Stable on ppc wrt bug 202120
